# qa-evidence-collector

./: .gitignore  README.md  build_exe.ps1  pyproject.toml  qa_evidence_collector.spec  requirements.txt
docs/: 01_PROJECT_PROPOSAL.md  02_V1.1_PLAN.md  03_V1.2_PLAN.md
src/qa_evidence_collector/: main.py
src/qa_evidence_collector/config/: settings.py
src/qa_evidence_collector/core/: hotkey_manager.py  session_manager.py  step.py
src/qa_evidence_collector/services/: jira_service.py  report_service.py  screenshot_service.py  storage_service.py
src/qa_evidence_collector/ui/: annotation_editor.py  issue_key_dialog.py  new_session_dialog.py  note_dialog.py  settings_dialog.py  startup_window.py  step_list_view.py  test_result_dialog.py  toolbar.py
tests/: test_session_manager.py
